--- a/.github/workflows/react.yaml
+++ b/.github/workflows/react.yaml
@@ -3,12 +3,12 @@ name: Deploy
 on: 
   push:
     branches:
-      - main
-  workflow_dispatch:
+      - master
+      - staging
 
 jobs:
   deploy-staging:
-    if: github.event_name == 'push'
+    if: github.ref == 'refs/heads/staging'
     runs-on: ubuntu-latest
     steps:
       - name: Configure AWS Credentials
@@ -34,14 +34,14 @@ jobs:
 
       - name: Deploy to S3 (Staging)
         if: success()
-        run: aws s3 sync ./build s3://vuetra-aws/pfs/staging  
+        run: aws s3 sync ./build s3://vuetra-aws/workspace/staging  
 
       - name: Invalidate CloudFront Cache (Staging)
         if: success()
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID_STAGING }} --paths "/*"
 
   deploy-production:
-    if: github.event_name == 'workflow_dispatch'
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
       - name: Configure AWS Credentials
@@ -67,9 +67,8 @@ jobs:
 
       - name: Deploy to S3 (Production)
         if: success()
-        run: aws s3 sync ./build s3://vuetra-aws/pfs/production  
+        run: aws s3 sync ./build s3://vuetra/workspace-aws/production  
 
       - name: Invalidate CloudFront Cache (Production)
         if: success()
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID_PRODUCTION }} --paths "/*"
-
